--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
                </div>
             </div>
             <div class="row">
-               <div class="col-md-6 offset-md-3 about-info">
+               <div class="col-lg-6 offset-lg-3 about-info">
                   <h3 class="title-h3 about-title">Awesome Team</h3>
                   <p class="about-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                      euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
