--- a/blog.html
+++ b/blog.html
@@ -243,7 +243,7 @@
                            <a href="#" class="recent-tags">mechanical</a>
                         </div>
                      </div>
-                     <div class="card recent">
+                     <div class="card recent card-resent__insta">
                         <h2 class="subtitle recent-title">Instagram</h2>
                         <div class="card-body">
                            <a href="#" class="recent-insta"><img src="img/blog/i01.jpg" alt="image"></a>
