--- a/about.html
+++ b/about.html
@@ -1,229 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>LIAN | ABOUT</title>
-   <meta name="description" content="">
-   <meta name="keywords" content="">
-
-   <link rel="shortcut icon" href="favicon.ico">
-
-   <!-- Bootstrap -->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-   <!-- Google Font -->
-   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-      <!-- Font Awesome -->
-   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-   <!-- Animate.css -->
-   <link rel="stylesheet" href="css/animate.css">
-   <!-- Styles -->
-   <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body data-spy="scroll" data-target="#navbar" data-offset="90">
-   <header class="d-flex align-items-center">
-      <div class="container">
-         <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white">
-            <a class="navbar-brand" href="#"><img src="img/main/logo.png" alt="Logotype"></a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-               aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-               <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                  <li class="nav-item">
-                     <a class="nav-link" href="index.html">Home</span></a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link active" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="portfolio.html">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="contacts.html">Contact</a>
-                  </li>
-               </ul>
-               <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control-search form-search mr-sm-2" type="search" placeholder="Search">
-                  <button class="btn my-2 my-sm-0" type="submit"></button>
-               </form>
-               <i class="fas fa-search"></i>
-            </div>
-         </nav>
-      </div>
-   </header>
-   <main class="about">
-      <section class="heading contact-heading">
-         <div class="container">
-            <div class="row">
-               <div class="col">
-                  <h1 class="title heading-title">About The Agency</h1>
-                  <h2 class="subtitle">Welcome to Lian</h2>
-               </div>
-            </div>
-         </div>
-      </section>
-      <section class="about-box">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-6 about-box__image">
-                  <img src="img/about/01.jpg" alt="staff">
-               </div>
-               <div class="col-md-6">
-                  <div class="about-story">
-                     <h2 class="subtitle about-story__title">Our Story</h2>
-                     <p class="about-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-                        nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                        minim veniam, quis nostrud exerci tation ullamcorper suscipit.</p>
-                     <p class="about-text">Nam liber tempor cum soluta nobis eleifend option congue nihil
-                        imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam;
-                        est usus legentis in iis qui facit eorum claritatem.</p>
-                  </div>
-                  <div class="about-skills">
-                     <h2 class="subtitle about-skills__title">Our SKills</h2>
-                     <div class="progress-wrapper progress-wrapper-1">
-                        <h5 class="progress__title">Photoshop</h5>
-                        <div class="progress progress-1">
-                           <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                     </div>
-                     <div class="progress-wrapper progress-wrapper-2">
-                        <h5 class="progress__title">Branding</h5>
-                        <div class="progress progress-2">
-                           <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                     </div>
-                     <div class="progress-wrapper progress-wrapper-3">
-                        <h5 class="progress__title">Photography</h5>
-                        <div class="progress progress-3">
-                           <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                     </div>
-                     <div class="progress-wrapper progress-wrapper-4">
-                        <h5 class="progress__title">Web Design</h5>
-                        <div class="progress progress-4">
-                           <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                     </div>
-
-                  </div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-lg-6 offset-lg-3 about-info">
-                  <h3 class="title-h3 about-title">Awesome Team</h3>
-                  <p class="about-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                     nostrud exerci tation ullamcorper suscipit.
-                  </p>
-               </div>
-            </div>
-            <div class="row">
-               <div class="card-deck">
-                  <div class="card about-card">
-                     <div class="about-image">
-                        <img src="img/about/1.png" class="card-img-top" alt="team">
-                     </div>                     
-                     <div class="card-body about-card-body">
-                        <h5 class="card-title about-card-title">Lian Joy</h5>
-                        <p class="card-text about-card-text"><small class="text-muted">CEO/Founder</small></p>
-                        <p class="card-text about-card-text">Lorem ipsum dolor sit amet, conse ctetuer adipi scing elit,
-                           sed diam nonu mmy nibh euis mod tinci
-                        </p>
-                     </div>
-                  </div>
-                  <div class="card about-card">
-                     <img src="img/about/2.png" class="card-img-top about-image about-image--position" alt="team">
-                     <div class="card-body about-card-body">
-                        <h5 class="card-title about-card-title">Albert Thanh </h5>
-                        <p class="card-text about-card-text"><small class="text-muted">CEO/Founder</small></p>
-                        <p class="card-text about-card-text">Lorem ipsum dolor sit amet, conse ctetuer adipi scing elit,
-                           sed diam nonu mmy nibh euis mod tinci
-                        </p>
-                     </div>
-                  </div>
-                  <div class="card about-card">
-                     <img src="img/about/3.png" class="card-img-top about-image about-image--position" alt="team">
-                     <div class="card-body about-card-body">
-                        <h5 class="card-title about-card-title">Jenn Pereira</h5>
-                        <p class="card-text about-card-text"><small class="text-muted">CEO/Founder
-                           </small></p>
-                        <p class="card-text about-card-text">Lorem ipsum dolor sit amet, conse ctetuer adipi scing elit,
-                           sed diam nonu mmy nibh euis mod tinci
-                        </p>
-
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </section>
-   </main>
-   <footer class="footer">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-2 offset-md-5 d-flex justify-content-center">
-               <a href="#"><img src="img/main/logo.png" alt="Logotype" class="footer-logo"></a>
-            </div>
-         </div>
-         <div class="row">
-            <div class="footer-social d-flex justify-content-between col-md-4 offset-md-4">
-               <a href="#"><i class="fab fa-facebook-f"></i></a>
-               <a href="#"><i class="fab fa-google-plus-g"></i></a>
-               <a href="#"><i class="fab fa-twitter"></i></a>
-               <a href="#"><i class="fab fa-linkedin-in"></i></a>
-               <a href="#"><i class="fab fa-dribbble"></i></a>
-               <a href="#"><i class="fab fa-pinterest-p"></i></a>
-               <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-md-6 offset-md-3">
-               <p class="footer-copyright">&copy; 2016 <a class="footer-copyright__link" href="#">Mulitix Theme</a> by
-                  ThemeForces. All Rights Reserved.
-               </p>
-            </div>
-         </div>
-      </div>
-   </footer>
-
-   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-   </script>
-   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-   </script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-   </script>
-   <script>
-      $('body').scrollspy({
-         target: '#navbar'
-      })
-   </script>
-   <script>
-      $(".fa-search").click(function () {
-         $(".form-inline, .form-search").toggleClass("active");
-      });
-   </script>
-   <!-- Script -->
-   <script src="js/script.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta content="IE=edge"http-equiv=X-UA-Compatible><meta content="width=device-width,initial-scale=1"name=viewport><title>LIAN | ABOUT</title><meta content=""name=description><meta content=""name=keywords><link href=favicon.ico rel="shortcut icon"><link href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css rel=stylesheet crossorigin=anonymous integrity=sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk><link href="https://fonts.googleapis.com/css2?family=Lato&display=swap"rel=stylesheet><link href=https://pro.fontawesome.com/releases/v5.10.0/css/all.css rel=stylesheet crossorigin=anonymous integrity=sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p><link href=css/animate.css rel=stylesheet><link href=css/styles.css rel=stylesheet><body data-offset=90 data-spy=scroll data-target=#navbar><header class="d-flex align-items-center"><div class=container><nav class="bg-white navbar navbar-expand-lg navbar-light"id=navbar><a href=# class=navbar-brand><img alt=Logotype src=img/main/logo.png></a><button class=navbar-toggler type=button aria-controls=navbarTogglerDemo02 aria-expanded=false aria-label="Toggle navigation"data-target=#navbarTogglerDemo02 data-toggle=collapse><span class=navbar-toggler-icon></span></button><div class="collapse navbar-collapse"id=navbarTogglerDemo02><ul class="ml-auto mt-2 mt-lg-0 navbar-nav"><li class=nav-item><a href=index.html class=nav-link>Home</a><li class=nav-item><a href=about.html class="nav-link active">About</a><li class=nav-item><a href=portfolio.html class=nav-link>Portfolio</a><li class=nav-item><a href=blog.html class=nav-link>Blog</a><li class=nav-item><a href=contacts.html class=nav-link>Contact</a></ul><form class="my-2 form-inline my-lg-0"><input class="form-control-search form-search mr-sm-2"placeholder=Search type=search> <button class="my-2 btn my-sm-0"type=submit></button></form><i class="fa-search fas"></i></div></nav></div></header><main class=about><section class="contact-heading heading"><div class=container><div class=row><div class=col><h1 class="heading-title title">About The Agency</h1><h2 class=subtitle>Welcome to Lian</h2></div></div></div></section><section class=about-box><div class=container><div class=row><div class="col-md-6 about-box__image"><img alt=staff src=img/about/01.jpg></div><div class=col-md-6><div class=about-story><h2 class="subtitle about-story__title">Our Story</h2><p class=about-text>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.<p class=about-text>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.</div><div class=about-skills><h2 class="subtitle about-skills__title">Our SKills</h2><div class="progress-wrapper progress-wrapper-1"><h5 class=progress__title>Photoshop</h5><div class="progress progress-1"><div class=progress-bar aria-valuemax=100 aria-valuemin=0 aria-valuenow=90 role=progressbar style=width:90%></div></div></div><div class="progress-wrapper progress-wrapper-2"><h5 class=progress__title>Branding</h5><div class="progress progress-2"><div class=progress-bar aria-valuemax=100 aria-valuemin=0 aria-valuenow=95 role=progressbar style=width:95%></div></div></div><div class="progress-wrapper progress-wrapper-3"><h5 class=progress__title>Photography</h5><div class="progress progress-3"><div class=progress-bar aria-valuemax=100 aria-valuemin=0 aria-valuenow=50 role=progressbar style=width:50%></div></div></div><div class="progress-wrapper progress-wrapper-4"><h5 class=progress__title>Web Design</h5><div class="progress progress-4"><div class=progress-bar aria-valuemax=100 aria-valuemin=0 aria-valuenow=85 role=progressbar style=width:85%></div></div></div></div></div></div><div class=row><div class="about-info col-lg-6 offset-lg-3"><h3 class="about-title title-h3">Awesome Team</h3><p class=about-text>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</div></div><div class=row><div class=card-deck><div class="about-card card"><div class=about-image><img alt=team src=img/about/1.png class=card-img-top></div><div class="about-card-body card-body"><h5 class="about-card-title card-title">Lian Joy</h5><p class="about-card-text card-text"><small class=text-muted>CEO/Founder</small><p class="about-card-text card-text">Lorem ipsum dolor sit amet, conse ctetuer adipi scing elit, sed diam nonu mmy nibh euis mod tinci</div></div><div class="about-card card"><img alt=team src=img/about/2.png class="about-image about-image--position card-img-top"><div class="about-card-body card-body"><h5 class="about-card-title card-title">Albert Thanh</h5><p class="about-card-text card-text"><small class=text-muted>CEO/Founder</small><p class="about-card-text card-text">Lorem ipsum dolor sit amet, conse ctetuer adipi scing elit, sed diam nonu mmy nibh euis mod tinci</div></div><div class="about-card card"><img alt=team src=img/about/3.png class="about-image about-image--position card-img-top"><div class="about-card-body card-body"><h5 class="about-card-title card-title">Jenn Pereira</h5><p class="about-card-text card-text"><small class=text-muted>CEO/Founder</small><p class="about-card-text card-text">Lorem ipsum dolor sit amet, conse ctetuer adipi scing elit, sed diam nonu mmy nibh euis mod tinci</div></div></div></div></div></section></main><footer class=footer><div class=container><div class=row><div class="d-flex col-md-2 justify-content-center offset-md-5"><a href=#><img alt=Logotype src=img/main/logo.png class=footer-logo></a></div></div><div class=row><div class="d-flex col-md-4 footer-social justify-content-between offset-md-4"><a href=#><i class="fab fa-facebook-f"></i></a> <a href=#><i class="fab fa-google-plus-g"></i></a> <a href=#><i class="fab fa-twitter"></i></a> <a href=#><i class="fab fa-linkedin-in"></i></a> <a href=#><i class="fab fa-dribbble"></i></a> <a href=#><i class="fab fa-pinterest-p"></i></a> <a href=#><i class="fab fa-instagram"></i></a></div></div><div class=row><div class="col-md-6 offset-md-3"><p class=footer-copyright>© 2016 <a href=# class=footer-copyright__link>Mulitix Theme</a> by ThemeForces. All Rights Reserved.</div></div></div></footer><script src=https://code.jquery.com/jquery-3.5.1.slim.min.js crossorigin=anonymous integrity=sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj></script><script src=https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js crossorigin=anonymous integrity=sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo></script><script src=https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js crossorigin=anonymous integrity=sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI></script><script>$("body").scrollspy({target:"#navbar"})</script><script>$(".fa-search").click(function(){$(".form-inline, .form-search").toggleClass("active")})</script><script src=js/script.js></script>
