--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div> 
             
             <!-- Load more -->
-            <div class="col d-flex justify-content-center">
+            <div class="after-posts col d-flex justify-content-center">
             <!--   <div class="spinner-border spinner-border-sm load-more" role="status">
                   <span class="sr-only">Load more</span>
                </div> -->
@@ -182,7 +182,7 @@
                   Load more
                   <span class="" role="status" aria-hidden="true"></span>
                </button> -->
-               <div class="after-posts load-more blog-more">
+               <div class="load-more blog-more">
                   <a href="#" class="d-flex justify-content-between align-items-center more-btn">Load More
                      <div class="spinner-border spinner-border-sm text-light" role="status">
                         <span class="sr-only"></span>
