--- a/index.html
+++ b/index.html
@@ -174,20 +174,9 @@
             </div> 
             
             <!-- Load more -->
-            <div class="after-posts col d-flex justify-content-center">
-            <!--   <div class="spinner-border spinner-border-sm load-more" role="status">
-                  <span class="sr-only">Load more</span>
-               </div> -->
-               <!-- <button type="button" class="btn load-more">
-                  Load more
-                  <span class="" role="status" aria-hidden="true"></span>
-               </button> -->
-               <div class="load-more blog-more">
-                  <a href="#" class="d-flex justify-content-between align-items-center more-btn">Load More
-                     <div class="spinner-border spinner-border-sm text-light" role="status">
-                        <span class="sr-only"></span>
-                     </div>
-                  </a>                  
+            <div class="col d-flex justify-content-center">
+               <div class="blog-more">
+                  <a href="#" class="more-btn">Load More</a>
                </div>
             </div> 
          </div> 
@@ -247,8 +236,6 @@
    <script>
       var mixer = mixitup('.card-columns');  
    </script>
-   <!-- Script -->
-   <script src="js/script.js"></script>
 </body>
 
 </html>
