--- a/index.html
+++ b/index.html
@@ -234,7 +234,11 @@
       });
    </script>
    <script>
-      var mixer = mixitup('.card-columns');  
+      var mixer = mixitup('.card-columns', {
+         animation: {
+            enable: false 
+         }
+      });  
    </script>
 </body>
 
