--- a/contacts.html
+++ b/contacts.html
@@ -1,1 +1,201 @@
-<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta content="IE=edge"http-equiv=X-UA-Compatible><meta content="width=device-width,initial-scale=1"name=viewport><title>LIAN | CONTANTS</title><meta content=""name=description><meta content=""name=keywords><link href=favicon.ico rel="shortcut icon"><link href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css rel=stylesheet crossorigin=anonymous integrity=sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk><link href=https://pro.fontawesome.com/releases/v5.10.0/css/all.css rel=stylesheet crossorigin=anonymous integrity=sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p><link href=css/styles.css rel=stylesheet><body data-offset=90 data-spy=scroll data-target=#navbar><header class="d-flex align-items-center"><div class=container><nav class="bg-white navbar navbar-expand-lg navbar-light"id=navbar><a href=# class=navbar-brand><img alt=Logotype src=img/main/logo.png></a><button class=navbar-toggler type=button aria-controls=navbarTogglerDemo02 aria-expanded=false aria-label="Toggle navigation"data-target=#navbarTogglerDemo02 data-toggle=collapse><span class=navbar-toggler-icon></span></button><div class="collapse navbar-collapse"id=navbarTogglerDemo02><ul class="ml-auto mt-2 mt-lg-0 navbar-nav"><li class=nav-item><a href=index.html class=nav-link>Home</a><li class=nav-item><a href=about.html class=nav-link>About</a><li class=nav-item><a href=portfolio.html class=nav-link>Portfolio</a><li class=nav-item><a href=blog.html class=nav-link>Blog</a><li class=nav-item><a href=contacts.html class="nav-link active">Contact</a></ul><form class="my-2 form-inline my-lg-0"><input class="form-control-search form-search mr-sm-2"placeholder=Search type=search> <button class="my-2 btn my-sm-0"type=submit></button></form><i class="fa-search fas"></i></div></nav></div></header><main class=contacts><section class="contact-heading heading"><div class=container><div class=row><div class=col><h1 class="heading-title title">Get in Touch</h1><h2 class=subtitle>Contact us Today</h2></div></div></div></section><section class=form><div class=container><div class=row><div class="col col-md-4"><div class=form-info><h3 class="title-h3 form-title">Office Info</h3><p class=form-subtitle>People Behind the Success of our Company</div><p class="form-text form-text--margin"><span>Office Hours: </span>Mon-Friday 8am - 10pm<p class="form-text form-text--margin"><span>Address:</span> Igbalangao, Bugasong, Antique<p class=form-text><span>Tell: </span><a href=tel:+123-456-7890 class=form-text-link>123-456-7890</a><p class=form-text><span>Fax: </span><a href=tel:+123-456-7890 class=form-text-link>123-456-7890</a></div><div class=col-md-8><form><div class=form-row><div class="col-md-6 form-group"><input class=form-control placeholder=Name type=name></div><div class="col-md-6 form-group"><input class=form-control placeholder=Email type=email></div></div><div class=form-group><input class="form-control form-control--message"placeholder=Massage></div><button class=form-btn type=submit>Send Message</button></form></div></div></div></section><section class=map><div class=container-fluid><div class=row><div class=col><script src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2f43234e13551c6df1698dd34939debbce3f9d87dae6c7a6ffbac82d637cbe2b&width=100%25&height=360&lang=ru_RU&scroll=false"async charset=utf-8></script></div></div></div></section><section class=value><div class=container><div class=row><div class="col-md-6 offset-md-3"><h3 class="title-h3 value-title">Our Values</h3><p class=value-text>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</div></div><div class=row><div class=card-deck><div class=card><img alt=... src=img/contacts/01.jpg class=card-img-top><div class=card-body><h5 class="subtitle card-title">Who We Are</h5><p class="value-text card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</div></div><div class=card><img alt=... src=img/contacts/02.jpg class=card-img-top><div class=card-body><h5 class="subtitle card-title">Our Vision</h5><p class="value-text card-text">Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me.</div></div><div class=card><img alt=... src=img/contacts/03.jpg class=card-img-top><div class=card-body><h5 class="subtitle card-title">Our Mission</h5><p class="value-text card-text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</div></div></div></div></div></section></main><footer class=footer><div class=container><div class=row><div class="d-flex col-md-2 justify-content-center offset-md-5"><a href=#><img alt=Logotype src=img/main/logo.png class=footer-logo></a></div></div><div class=row><div class="d-flex col-md-4 footer-social justify-content-between offset-md-4"><a href=#><i class="fab fa-facebook-f"></i></a> <a href=#><i class="fab fa-google-plus-g"></i></a> <a href=#><i class="fab fa-twitter"></i></a> <a href=#><i class="fab fa-linkedin-in"></i></a> <a href=#><i class="fab fa-dribbble"></i></a> <a href=#><i class="fab fa-pinterest-p"></i></a> <a href=#><i class="fab fa-instagram"></i></a></div></div><div class=row><div class="col-md-6 offset-md-3"><p class=footer-copyright>© 2016 <a href=# class=footer-copyright__link>Mulitix Theme</a> by ThemeForces. All Rights Reserved.</div></div></div></footer><script src=https://code.jquery.com/jquery-3.5.1.slim.min.js crossorigin=anonymous integrity=sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj></script><script src=https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js crossorigin=anonymous integrity=sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo></script><script src=https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js crossorigin=anonymous integrity=sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI></script><script>$("body").scrollspy({target:"#navbar"});</script><script>$(".fa-search").click(function(){$(".form-inline, .form-search").toggleClass("active")})</script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>LIAN | CONTANTS</title>
+   <meta name="description" content="">
+   <meta name="keywords" content="">
+
+   <link rel="shortcut icon" href="favicon.ico">
+
+   <!-- Bootstrap -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+   <!-- Font Awesome -->
+   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+   <!-- Styles -->
+   <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body data-spy="scroll" data-target="#navbar" data-offset="90">
+   <header class="d-flex align-items-center">
+      <div class="container">
+         <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white">
+            <a class="navbar-brand" href="#"><img src="img/main/logo.png" alt="Logotype"></a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+               aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+               <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                  <li class="nav-item">
+                     <a class="nav-link " href="index.html">Home</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="portfolio.html">Portfolio</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="blog.html">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link active" href="contacts.html">Contact</a>
+                  </li>
+               </ul>
+               <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control-search form-search mr-sm-2" type="search" placeholder="Search">
+                  <button class="btn my-2 my-sm-0" type="submit"></button>
+               </form>
+               <i class="fas fa-search"></i>
+            </div>
+         </nav>
+      </div>
+   </header>
+   <main class="contacts">
+      <section class="heading contact-heading">
+         <div class="container">
+            <div class="row">
+               <div class="col">
+                  <h1 class="title heading-title">Get in Touch</h1>
+                  <h2 class="subtitle">Contact us Today</h2>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="form">
+         <div class="container">
+            <div class="row">
+               <div class="col col-md-4">
+                  <div class="form-info">
+                     <h3 class="form-title title-h3">Office Info</h3>
+                     <p class="form-subtitle">People Behind the Success of our Company</p>
+                  </div>
+                  <p class="form-text form-text--margin"><span>Office Hours: </span>Mon-Friday 8am - 10pm</p>
+                  <p class="form-text form-text--margin"><span>Address:</span> Igbalangao, Bugasong, Antique</p>
+                  <p class="form-text"><span>Tell: </span><a class="form-text-link"
+                        href="tel:+123-456-7890">123-456-7890</a></p>
+                  <p class="form-text"><span>Fax: </span><a class="form-text-link"
+                        href="tel:+123-456-7890">123-456-7890</a></p>
+               </div>
+               <div class="col-md-8">
+                  <form>
+                     <div class="form-row">
+                        <div class="form-group col-md-6">
+                           <input type="name" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="form-group col-md-6">
+                           <input type="email" class="form-control" placeholder="Email">
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <input type="text" class="form-control form-control--message" placeholder="Massage">
+                     </div>
+                     <button class="form-btn" type="submit">Send Message</button>
+                  </form>
+               </div>
+            </div>
+         </div>
+      </section>      
+      <section class="map">
+         <div class="container-fluid ">
+            <div class="row">
+               <div class="col">
+                  <script type="text/javascript" charset="utf-8" async
+                     src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2f43234e13551c6df1698dd34939debbce3f9d87dae6c7a6ffbac82d637cbe2b&amp;width=100%25&amp;height=360&amp;lang=ru_RU&amp;scroll=false">
+                  </script>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="value">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-6 offset-md-3">
+                  <h3 class="value-title title-h3">Our Values</h3>
+                  <p class="value-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+                     nostrud exerci tation ullamcorper suscipit.</p>
+               </div>
+            </div>
+            <div class="row">
+               <div class="card-deck">
+                  <div class="card">
+                     <img src="img/contacts/01.jpg" class="card-img-top" alt="...">
+                     <div class="card-body">
+                        <h5 class="card-title subtitle">Who We Are</h5>
+                        <p class="card-text value-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
+                     </div>
+                  </div>
+                  <div class="card">
+                     <img src="img/contacts/02.jpg" class="card-img-top" alt="...">
+                     <div class="card-body">
+                        <h5 class="card-title subtitle">Our Vision</h5>
+                        <p class="card-text value-text">Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me.</p>
+                     </div>
+                  </div>
+                  <div class="card">
+                     <img src="img/contacts/03.jpg" class="card-img-top" alt="...">
+                     <div class="card-body">
+                        <h5 class="card-title subtitle">Our Mission</h5>
+                        <p class="card-text value-text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+   </main>
+   <footer class="footer">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-2 offset-md-5 d-flex justify-content-center">
+               <a href="#"><img src="img/main/logo.png" alt="Logotype" class="footer-logo"></a>
+            </div>
+         </div>
+         <div class="row">
+            <div class="footer-social d-flex justify-content-between col-md-4 offset-md-4">
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+               <a href="#"><i class="fab fa-google-plus-g"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
+               <a href="#"><i class="fab fa-dribbble"></i></a>
+               <a href="#"><i class="fab fa-pinterest-p"></i></a>
+               <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-md-6 offset-md-3">
+               <p class="footer-copyright">&copy; 2016 <a class="footer-copyright__link" href="#">Mulitix Theme</a> by ThemeForces. All Rights Reserved.</p>
+            </div>
+         </div>
+      </div>
+   </footer>
+
+   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+   </script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+   </script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+   </script>
+   <script>
+      $('body').scrollspy({ target: '#navbar' })
+   </script>
+   <script>
+      $(".fa-search").click(function(){
+         $(".form-inline, .form-search").toggleClass("active");
+	   });
+   </script>
+</body>
+
+</html>
